- add tag and team notification - reformate composer json

--- a/composer.json
+++ b/composer.json
@@ -1,84 +1,86 @@
 {
-    "name": "omnia-digital/catalyst-core-plugin",
-    "description": "Core plugin required for Catalyst",
-    "keywords": [
-        "omnia-digital",
-        "laravel",
-        "catalyst-core-plugin"
-    ],
-    "homepage": "https://github.com/omnia-digital/catalyst-core-plugin",
-    "support": {
-        "issues": "https://github.com/omnia-digital/catalyst-core-plugin/issues",
-        "source": "https://github.com/omnia-digital/catalyst-core-plugin"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Josh Torres",
-            "email": "josht@omniadigital.io",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": "^8.1",
-        "ext-intl": "*",
-        "filament/filament": "^3.0",
-        "filament/spatie-laravel-settings-plugin": "^3.0",
-        "illuminate/contracts": "^10.0",
-        "laravel/jetstream": "^4.0",
-        "spatie/laravel-medialibrary": "^10.13",
-        "spatie/laravel-package-tools": "^1.15.0",
-        "spatie/laravel-searchable": "^1.11"
-    },
-    "require-dev": {
-        "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.9",
-        "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-arch": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/laravel-ray": "^1.26"
-    },
-    "autoload": {
-        "psr-4": {
-            "OmniaDigital\\CatalystCore\\": "src/",
-            "OmniaDigital\\CatalystCore\\Database\\Factories\\": "database/factories/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "OmniaDigital\\CatalystCore\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint"
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "OmniaDigital\\CatalystCore\\CatalystCoreServiceProvider"
-            ],
-            "aliases": {
-                "Catalyst": "OmniaDigital\\CatalystCore\\Facades\\Catalyst",
-                "Translate": "OmniaDigital\\CatalystCore\\Facades\\TranslateFacade"
-            }
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "name": "omnia-digital/catalyst-core-plugin",
+  "description": "Core plugin required for Catalyst",
+  "keywords": [
+    "omnia-digital",
+    "laravel",
+    "catalyst-core-plugin"
+  ],
+  "homepage": "https://github.com/omnia-digital/catalyst-core-plugin",
+  "support": {
+    "issues": "https://github.com/omnia-digital/catalyst-core-plugin/issues",
+    "source": "https://github.com/omnia-digital/catalyst-core-plugin"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Josh Torres",
+      "email": "josht@omniadigital.io",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": "^8.1",
+    "ext-intl": "*",
+    "bezhansalleh/filament-shield": "^3.0",
+    "filament/filament": "^3.0",
+    "filament/spatie-laravel-settings-plugin": "^3.0",
+    "illuminate/contracts": "^10.0",
+    "laravel/jetstream": "^4.0",
+    "spatie/laravel-medialibrary": "^10.13",
+    "spatie/laravel-package-tools": "^1.15.0",
+    "spatie/laravel-searchable": "^1.11",
+    "spatie/laravel-tags": "^4.5"
+  },
+  "require-dev": {
+    "laravel/pint": "^1.0",
+    "nunomaduro/collision": "^7.9",
+    "nunomaduro/larastan": "^2.0.1",
+    "orchestra/testbench": "^8.0",
+    "pestphp/pest": "^2.0",
+    "pestphp/pest-plugin-arch": "^2.0",
+    "pestphp/pest-plugin-laravel": "^2.0",
+    "phpstan/extension-installer": "^1.1",
+    "phpstan/phpstan-deprecation-rules": "^1.0",
+    "phpstan/phpstan-phpunit": "^1.0",
+    "spatie/laravel-ray": "^1.26"
+  },
+  "autoload": {
+    "psr-4": {
+      "OmniaDigital\\CatalystCore\\": "src/",
+      "OmniaDigital\\CatalystCore\\Database\\Factories\\": "database/factories/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "OmniaDigital\\CatalystCore\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
+    "analyse": "vendor/bin/phpstan analyse",
+    "test": "vendor/bin/pest",
+    "test-coverage": "vendor/bin/pest --coverage",
+    "format": "vendor/bin/pint"
+  },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "phpstan/extension-installer": true
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "OmniaDigital\\CatalystCore\\CatalystCoreServiceProvider"
+      ],
+      "aliases": {
+        "Catalyst": "OmniaDigital\\CatalystCore\\Facades\\Catalyst",
+        "Translate": "OmniaDigital\\CatalystCore\\Facades\\TranslateFacade"
+      }
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
