--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
     "illuminate/contracts": "^10.0",
     "laravel/cashier": "^14.12",
     "laravel/jetstream": "^4.0",
+    "overtrue/laravel-follow": "^5.1",
     "spatie/laravel-medialibrary": "^10.13",
     "spatie/laravel-package-tools": "^1.15.0",
     "spatie/laravel-searchable": "^1.11",
+    "spatie/laravel-sluggable": "^3.5",
     "spatie/laravel-tags": "^4.5"
   },
   "require-dev": {
