--- a/composer.json
+++ b/composer.json
@@ -22,19 +22,44 @@
   "require": {
     "php": "^8.1",
     "ext-intl": "*",
+    "ariaieboy/filament-jalali-datetime": "^1.0",
+    "awcodes/filament-badgeable-column": "^2.0",
+    "awssat/laravel-visits": "^6.0",
+    "bezhansalleh/filament-exceptions": "^2.0",
+    "bezhansalleh/filament-google-analytics": "^2.0.1",
     "bezhansalleh/filament-shield": "^3.0",
+    "blade-ui-kit/blade-heroicons": "^2.1",
+    "calebporzio/sushi": "^2.4",
+    "codeat3/blade-teeny-icons": "^1.9",
     "filament/filament": "^3.0",
     "filament/spatie-laravel-settings-plugin": "^3.0",
     "illuminate/contracts": "^10.0",
     "laravel/cashier": "^14.12",
     "laravel/jetstream": "^4.0",
+    "laravel/passport": "^11.9",
     "omnia-digital/library": "*",
+    "omnia-digital/livewire-calendar": "^3.0",
+    "omnia-digital/media-manager": "dev-main",
+    "owenvoke/blade-fontawesome": "^2.2",
     "overtrue/laravel-follow": "^5.1",
+    "phpsa/filament-password-reveal": "^2.0",
+    "ralphjsmit/laravel-filament-components": "^1.1",
+    "shuvroroy/filament-spatie-laravel-backup": "*",
+    "shuvroroy/filament-spatie-laravel-health": "^2.0",
     "spatie/laravel-medialibrary": "^10.13",
     "spatie/laravel-package-tools": "^1.15.0",
     "spatie/laravel-searchable": "^1.11",
     "spatie/laravel-sluggable": "^3.5",
-    "spatie/laravel-tags": "^4.5"
+    "spatie/laravel-tags": "^4.5",
+    "spatie/laravel-activitylog": "^4.4",
+    "spatie/laravel-analytics": "^5.0",
+    "spatie/laravel-backup": "^8.1",
+    "spatie/laravel-data": "^3.4",
+    "spatie/laravel-permission": "^5.7",
+    "stechstudio/filament-impersonate": "^3.5",
+    "stripe/stripe-php": "^10.21",
+    "thomasjohnkane/snooze": "^2.3",
+    "tightenco/ziggy": "^1.7"
   },
   "require-dev": {
     "laravel/pint": "^1.0",
