--- a/composer.json
+++ b/composer.json
@@ -37,25 +37,26 @@
     "laravel/cashier": "^14.12",
     "laravel/jetstream": "^4.0",
     "laravel/passport": "^11.9",
+    "omnia-digital/catalyst-location-plugin": "dev-main",
     "omnia-digital/library": "*",
     "omnia-digital/livewire-calendar": "^3.0",
     "omnia-digital/media-manager": "dev-main",
-    "owenvoke/blade-fontawesome": "^2.2",
     "overtrue/laravel-follow": "^5.1",
+    "owenvoke/blade-fontawesome": "^2.2",
     "phpsa/filament-password-reveal": "^2.0",
     "ralphjsmit/laravel-filament-components": "^1.1",
     "shuvroroy/filament-spatie-laravel-backup": "*",
     "shuvroroy/filament-spatie-laravel-health": "^2.0",
-    "spatie/laravel-medialibrary": "^10.13",
-    "spatie/laravel-package-tools": "^1.15.0",
-    "spatie/laravel-searchable": "^1.11",
-    "spatie/laravel-sluggable": "^3.5",
-    "spatie/laravel-tags": "^4.5",
     "spatie/laravel-activitylog": "^4.4",
     "spatie/laravel-analytics": "^5.0",
     "spatie/laravel-backup": "^8.1",
     "spatie/laravel-data": "^3.4",
+    "spatie/laravel-medialibrary": "^10.13",
+    "spatie/laravel-package-tools": "^1.15.0",
     "spatie/laravel-permission": "^5.7",
+    "spatie/laravel-searchable": "^1.11",
+    "spatie/laravel-sluggable": "^3.5",
+    "spatie/laravel-tags": "^4.5",
     "stechstudio/filament-impersonate": "^3.5",
     "stripe/stripe-php": "^10.21",
     "thomasjohnkane/snooze": "^2.3",
@@ -99,6 +100,12 @@
       "phpstan/extension-installer": true
     }
   },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../catalyst-location-plugin"
+    }
+  ],
   "extra": {
     "laravel": {
       "providers": [
