- update fix-php-code to only run on dev branch

--- a/.github/workflows/fix-php-code-styling.yml
+++ b/.github/workflows/fix-php-code-styling.yml
@@ -2,6 +2,7 @@ name: "Fix PHP Code Styling"
 
 on:
   push:
+    branches: [dev]
     paths:
       - '**.php'
 
@@ -24,4 +25,4 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Fix styling
+          commit_message: Reformat code & styling
