- update namespaces - update filament resources

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "laravel/jetstream": "^4.0",
     "laravel/passport": "^11.9",
     "omnia-digital/catalyst-location-plugin": "dev-main",
+    "omnia-digital/catalyst-reviews-plugin": "dev-main",
     "omnia-digital/library": "*",
     "omnia-digital/livewire-calendar": "^3.0",
     "omnia-digital/media-manager": "dev-main",
@@ -103,6 +104,10 @@
     {
       "type": "vcs",
       "url": "https://github.com/omnia-digital/catalyst-location-plugin"
+    },
+    {
+      "type": "path",
+      "url": "../catalyst-reviews-plugin"
     }
   ],
   "extra": {
