--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:styles": "npx tailwindcss -i resources/css/index.css -o resources/dist/catalyst-core-plugin.css --postcss --watch",
+        "dev:styles": "npx tailwind -i resources/css/index.css -o resources/dist/catalyst-core-plugin.css --postcss --watch",
+        "dev:styles-social": "npx tailwind -i resources/css/filament/social/theme.css -o resources/dist/catalyst-core-social.css --postcss --watch",
         "dev:scripts": "node bin/build.js --dev",
-        "build:styles": "npx tailwindcss -i resources/css/index.css -o resources/dist/catalyst-core-plugin.css --postcss --minify && npm run purge",
+        "build:styles": "npx tailwind -i resources/css/filament/admin/theme.css -o resources/dist/catalyst-core-admin.css --postcss --minify && npm run purge",
         "build:scripts": "node bin/build.js",
         "purge": "filament-purge -i resources/dist/catalyst-core-plugin.css -o resources/dist/catalyst-core-plugin.css -v 3.x",
         "dev": "npm-run-all --parallel dev:*",
@@ -12,15 +13,23 @@
     },
     "devDependencies": {
         "@awcodes/filament-plugin-purge": "^1.1.1",
-        "@tailwindcss/forms": "^0.5.4",
-        "@tailwindcss/typography": "^0.5.9",
+        "@tailwindcss/forms": "^0.5.6",
+        "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.14",
+        "cssnano": "^6.0.1",
         "esbuild": "^0.19.2",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.26",
+        "postcss": "^8.4.27",
+        "postcss-cli": "^10.1.0",
         "postcss-import": "^15.1.0",
+        "postcss-nesting": "^12.0.0",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.3.3"
+    },
+    "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "tailwind-scrollbar-hide": "^1.1.7",
+        "tw-elements": "^1.0.0"
     }
 }
