--- a/composer.json
+++ b/composer.json
@@ -22,25 +22,31 @@
   "require": {
     "php": "^8.1",
     "ext-intl": "*",
-    "ariaieboy/filament-jalali-datetime": "^1.0",
-    "awcodes/filament-badgeable-column": "^2.0",
-    "awssat/laravel-visits": "^6.0",
-    "bezhansalleh/filament-exceptions": "^2.0",
+    "ariaieboy/filament-jalali-datetime": "*",
+    "awcodes/filament-badgeable-column": "*",
+    "awssat/laravel-visits": "*",
+    "bezhansalleh/filament-exceptions": "*",
+    "bezhansalleh/filament-google-analytics": "*",
     "bezhansalleh/filament-shield": "^3.0",
-    "blade-ui-kit/blade-heroicons": "^2.1",
-    "calebporzio/sushi": "^2.4",
-    "codeat3/blade-teeny-icons": "^1.9",
+    "blade-ui-kit/blade-heroicons": "*",
+    "calebporzio/sushi": "*",
+    "codeat3/blade-teeny-icons": "*",
     "doctrine/dbal": "*",
     "filament/filament": "^3.0",
     "filament/spatie-laravel-media-library-plugin": "^3.0-stable",
     "filament/spatie-laravel-settings-plugin": "^3.0",
+    "filament/spatie-laravel-tags-plugin": "^3.0-stable",
+    "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
     "illuminate/contracts": "^10.0",
     "illuminate/database": "^10.0",
     "illuminate/support": "^10.0",
+    "jorenvanhocht/laravel-share": "^4.2",
     "laravel/cashier": "^14.12",
+    "laravel/fortify": "^1.18",
     "laravel/framework": "^10.0",
     "laravel/jetstream": "^4.0",
     "laravel/passport": "^11.9",
+    "liran-co/laravel-notification-subscriptions": "^1.7",
     "livewire/livewire": "^3.0",
     "omnia-digital/catalyst-forms-plugin": "dev-main",
     "omnia-digital/catalyst-location-plugin": "dev-main",
@@ -48,10 +54,15 @@
     "omnia-digital/library": "*",
     "omnia-digital/livewire-calendar": "^3.0",
     "omnia-digital/media-manager": "dev-main",
+    "omniphx/forrest": "^2.17",
     "overtrue/laravel-follow": "^5.1",
     "owenvoke/blade-fontawesome": "^2.2",
     "phpsa/filament-password-reveal": "^2.0",
     "ralphjsmit/laravel-filament-components": "^1.1",
+    "rawilk/filament-password-input": "^1.1",
+    "shuvroroy/filament-spatie-laravel-backup": "*",
+    "shuvroroy/filament-spatie-laravel-health": "^2.0",
+    "spatie/laravel-settings": "^2.4",
     "spatie/laravel-activitylog": "^4.4",
     "spatie/laravel-analytics": "^5.0",
     "spatie/laravel-backup": "^8.1",
