- update catalyst core style files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "dev:styles": "npx tailwind -i resources/css/index.css -o resources/dist/catalyst-core-plugin.css --postcss --watch",
         "dev:styles-social": "npx tailwind -i resources/css/filament/social/theme.css -o resources/dist/catalyst-core-social.css --postcss --watch",
         "dev:scripts": "node bin/build.js --dev",
-        "build:styles": "npx tailwind -i resources/css/filament/admin/theme.css -o resources/dist/catalyst-core-admin.css --postcss --minify && npm run purge",
+        "build:admin-styles": "npx tailwind -i resources/css/filament/admin/theme.css -o resources/dist/catalyst-core-admin.css --postcss --minify && npm run purge",
+        "build:social-styles": "npx tailwind -i resources/css/filament/social/theme.css -o resources/dist/catalyst-core-social.css --postcss --minify && npm run purge",
         "build:scripts": "node bin/build.js",
         "purge": "filament-purge -i resources/dist/catalyst-core-plugin.css -o resources/dist/catalyst-core-plugin.css -v 3.x",
         "dev": "npm-run-all --parallel dev:*",
