--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "awssat/laravel-visits": "*",
     "bezhansalleh/filament-exceptions": "*",
     "bezhansalleh/filament-google-analytics": "*",
+    "bezhansalleh/filament-panel-switch": "^1.0",
     "bezhansalleh/filament-shield": "^3.0",
     "blade-ui-kit/blade-heroicons": "*",
     "calebporzio/sushi": "*",
@@ -62,7 +63,6 @@
     "rawilk/filament-password-input": "^1.1",
     "shuvroroy/filament-spatie-laravel-backup": "*",
     "shuvroroy/filament-spatie-laravel-health": "^2.0",
-    "spatie/laravel-settings": "^2.4",
     "spatie/laravel-activitylog": "^4.4",
     "spatie/laravel-analytics": "^5.0",
     "spatie/laravel-backup": "^8.1",
@@ -71,6 +71,7 @@
     "spatie/laravel-package-tools": "^1.15.0",
     "spatie/laravel-permission": "^5.7",
     "spatie/laravel-searchable": "^1.11",
+    "spatie/laravel-settings": "^2.4",
     "spatie/laravel-sluggable": "^3.5",
     "spatie/laravel-tags": "^4.5",
     "squirephp/countries-en": "*",
@@ -114,7 +115,8 @@
     "sort-packages": true,
     "allow-plugins": {
       "pestphp/pest-plugin": false,
-      "phpstan/extension-installer": false
+      "phpstan/extension-installer": false,
+      "php-http/discovery": false
     }
   },
   "repositories": [
