--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
     "spatie/laravel-analytics": "^5.0",
     "spatie/laravel-backup": "^8.1",
     "spatie/laravel-data": "^3.4",
+    "spatie/laravel-google-calendar": "^3.7",
     "spatie/laravel-medialibrary": "^10.13",
     "spatie/laravel-package-tools": "^1.15.0",
     "spatie/laravel-permission": "^5.7",
