--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "bezhansalleh/filament-panel-switch": "^1.0",
     "bezhansalleh/filament-shield": "^3.0",
     "blade-ui-kit/blade-heroicons": "*",
-    "calebporzio/sushi": "*",
+    "calebporzio/sushi": "^2.4",
     "codeat3/blade-teeny-icons": "*",
     "doctrine/dbal": "*",
     "filament/filament": "^3.0-stable",
@@ -38,6 +38,7 @@
     "filament/spatie-laravel-settings-plugin": "^3.0",
     "filament/spatie-laravel-tags-plugin": "^3.0-stable",
     "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
+    "google/apiclient": "^2.15",
     "illuminate/contracts": "^10.0",
     "illuminate/database": "^10.0",
     "illuminate/support": "^10.0",
@@ -47,6 +48,8 @@
     "laravel/framework": "^10.0",
     "laravel/jetstream": "^4.0",
     "laravel/passport": "^11.9",
+    "laravel/slack-notification-channel": "^3.2",
+    "league/iso3166": "^4.3",
     "liran-co/laravel-notification-subscriptions": "^1.7",
     "livewire/livewire": "^3.0",
     "omnia-digital/catalyst-forms-plugin": "dev-main",
@@ -63,6 +66,7 @@
     "rawilk/filament-password-input": "^1.1",
     "shuvroroy/filament-spatie-laravel-backup": "*",
     "shuvroroy/filament-spatie-laravel-health": "^2.0",
+    "spatie/data-transfer-object": "^3.9",
     "spatie/laravel-activitylog": "^4.4",
     "spatie/laravel-analytics": "^5.0",
     "spatie/laravel-backup": "^8.1",
