--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     "league/iso3166": "^4.3",
     "liran-co/laravel-notification-subscriptions": "^1.7",
     "livewire/livewire": "^3.0",
+    "monarobase/country-list": "^3.4",
     "omnia-digital/catalyst-forms-plugin": "dev-main",
     "omnia-digital/catalyst-location-plugin": "dev-main",
     "omnia-digital/catalyst-reviews-plugin": "dev-main",
@@ -70,7 +71,7 @@
     "spatie/laravel-activitylog": "^4.4",
     "spatie/laravel-analytics": "^5.0",
     "spatie/laravel-backup": "^8.1",
-    "spatie/laravel-data": "^3.4",
+    "spatie/laravel-data": "^3.11",
     "spatie/laravel-google-calendar": "^3.7",
     "spatie/laravel-medialibrary": "^10.13",
     "spatie/laravel-package-tools": "^1.15.0",
@@ -79,7 +80,7 @@
     "spatie/laravel-settings": "^2.4",
     "spatie/laravel-sluggable": "^3.5",
     "spatie/laravel-tags": "^4.5",
-    "squirephp/countries-en": "*",
+    "squirephp/countries-en": "^3.4",
     "stechstudio/filament-impersonate": "^3.5",
     "stripe/stripe-php": "^10.21",
     "thomasjohnkane/snooze": "^2.3",
