--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "filament/spatie-laravel-settings-plugin": "^3.0",
     "filament/spatie-laravel-tags-plugin": "^3.0-stable",
     "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
+    "filament/support": "^3.2",
     "google/apiclient": "^2.15",
     "illuminate/contracts": "^10.0",
     "illuminate/database": "^10.0",
